--- a/products.html
+++ b/products.html
@@ -28,6 +28,18 @@
   <div class="container">
     <h1 class="page-title">产品展示</h1>
 
+    <div class="product">
+      <a href="1845步兵.html" class="product-link">
+        <div class="product-info">
+          <h2>p1845步兵军刀 -- 英式军刀的最经典之作</h2>
+          <p>兼具美观与实用性的最佳选择</p>
+          <div class="price">限时首发价1550！！请勿错过</div>
+        </div>
+        <!-- 示例图片，需根据你的路径进行修改 -->
+        <img src="./1845原型.jpg" alt="cqj预览图" class="product-preview">
+      </a>
+    </div>
+
     <!-- 第一个产品 -->
     <div class="product">
       <a href="车丘嘉.html" class="product-link">
