--- a/1845步兵.html
+++ b/1845步兵.html
@@ -134,7 +134,7 @@
       此次复刻的版本为1854年的一体护手版本，相较于1845年可折叠护手的设计，取消了机械式结构的设计使得其耐用程度大幅提升，此版本在战斗中更加可靠。
     </p>
     <p class="product-description">
-      全长约95cm，重约750g，刃长82cm，最宽处0.7cm，有渐薄设计。军刀中的经典。
+      全长约95cm，重约750g，刃长82cm，最宽处7mm左右，有渐薄设计。军刀中的经典。
     </p>
     <p class="product-description price">
       首发预购前十五名将可以享受免费升级蚀刻的服务。各项配置选购价格如下：
