--- a/1845步兵.html
+++ b/1845步兵.html
@@ -134,7 +134,14 @@
       此次复刻的版本为1854年的一体护手版本，相较于1845年可折叠护手的设计，取消了机械式结构的设计使得其耐用程度大幅提升，此版本在战斗中更加可靠。
     </p>
     <p class="product-description">
-      全长约95cm，重约750g，刃长82cm，最厚处7mm左右，有渐薄设计。军刀中的经典。
+      全长约95cm，重约750g，刃长82cm，最厚处7mm左右，史实渐薄设计，尽可能复刻军刀中的经典之作。
+    </p>
+    <p class="product-description">
+      默认材料为60sicrva，气锤锻造，人工修型，非土炉热处理，油淬，预计硬度56HRC~57HRC。
+    </p>
+    <p class="product-description">
+      可替换材料为S7，综合性能优异，抗锈更佳。
+蚀刻花纹复刻原品，在产地和合格钢标区域会有一定程度的重新设计与修改。
     </p>
     <p class="product-description price">
       首发预购前十五名将可以享受免费升级蚀刻的服务。各项配置选购价格如下：
