--- a/1845步兵.html
+++ b/1845步兵.html
@@ -122,7 +122,7 @@
   </div>
 
   <div class="container">
-    <h1 class="product-title">英式p1845步兵军官佩刀</h1>
+    <h1 class="product-title">英式p1845步兵军官佩刀--（暂停销售）</h1>
     <p class="product-description">
       p1845英式军刀乃是英国维多利亚时代最具有代表性的军刀，其独特的刀条设计影响到了整个欧洲的军刀设计，是英式军刀中的经典之作。此型号的特点为茅尖宽槽的刀条，由威尔金森公司于1845年定型，和他的前辈1822式步兵军刀相比刀身更加牢固，从而更加不容易在战斗中折断。
     </p>
